force-app/main/default/objects/Rental_Fee__mdt/Rental_Fee__mdt.object-meta.xml
<CustomObject>
    <description>Customized rates for different types of vehicle rentals</description>
    <label>Rental Fee</label>
    <pluralLabel>Rental Fees</pluralLabel>
</CustomObject>