force-app/main/default/objects/Rental_Fee__mdt/fields/VRT_NUM_Price_per_day__c.field-meta.xml
<CustomField>
    <fullName>VRT_NUM_Price_per_day__c</fullName>
    <label>Price per day</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>