force-app/main/default/objects/Rental_Fee__mdt/fields/VRT_SEL_Season__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Season__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
                <default>true</default>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>