force-app/main/default/objects/Rental_Fee__mdt/fields/VRT_SEL_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coche</fullName>
                <default>true</default>
                <label>Coche</label>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>